--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         <img src="/images/ugm.png" class="img" alt="logo ugm">
 
         <h3>Belajar PWA</h3>
+        
+        <br><br>
+        <button id="show-notification">Show Notification</button>
+        <br><br>
 
         <label for="mhs-select">Gender </label>
         <select id="mhs-select">
