--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             <img src="/images/ceklis.jpg" class="img" alt="logo">
             <br>
             <br>
-            <h3>RESPONSI UTS PINTA</h3>
+            <h3>TABEL OBAT</h3>
+            <h5>Puskesmas InsyaAllah Berkah</h5>
         </div>
     </div>
 </div>
@@ -38,7 +39,7 @@
                         <label >Harga Obat</label>
                         <input type="text" class="form-control" id="harga_obat" placeholder="Harga Obat">
                     </div>
-                    <button type="submit" class="btn btn-primary">Tambah Obat</button>
+                    <center><button type="submit" class="btn btn-primary">Tambah Obat</button></center>
                 </form>
             </div>
         </div>
@@ -54,7 +55,7 @@
                     <th><center>KODE PRODUK</center></th>
                     <th><center>NAMA OBAT</center></th>
                     <th><center>HARGA OBAT</center></th>
-                    <th><center>OPTION</center></th>
+                    <th>OPTION</th>
                 </tr>
                 </thead>
                 <tbody>
