--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <form id="form-tambah">
                     <div class="form-group">
                         <label >Kode Produk</label>
-                        <input type="text" class="form-control" id="kode_produk" placeholder="Kode Obat">
+                        <input type="number" class="form-control" id="kode_produk" placeholder="Kode Obat">
                     </div>
                     <div class="form-group">
                         <label >Nama Obat</label>
@@ -37,7 +37,7 @@
                     </div>
                     <div class="form-group">
                         <label >Harga Obat</label>
-                        <input type="text" class="form-control" id="harga_obat" placeholder="Harga Obat">
+                        <input type="number" class="form-control" id="harga_obat" placeholder="Harga Obat">
                     </div>
                     <center><button type="submit" class="btn btn-primary">Tambah Obat</button></center>
                 </form>
